--- a/config-client/build.gradle
+++ b/config-client/build.gradle
@@ -29,6 +29,7 @@ ext {
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-config')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
